--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
     
         function calculate() {
             let odds = parseFloat(document.getElementById("odds").value);
-            let probability = parseFloat(document.getElementById("probability").value);
-            let result = ((1/(odds-probability))*-odds)*100+%;
+            let probability = parseFloat(document.getElementById("probability").value)/100;
+            let preResult = ((1/odds-probability)*(-1*odds))*100;
+            let result = Math.round(preResult*100)/100+'%'
             document.getElementById("result").innerHTML = result;
         }
         function fillAmericanOdds() {
