--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         function fillAmericanOdds() {
             let decimalOdds = parseFloat(document.getElementById("odds").value);
             let americanOdds = 0;
+                if(decimalOdds ==1 ){
+                        alert(1 is not a valid odd)
+                        {
             if (decimalOdds < 2) {
                 americanOdds = Math.round(-100 / (decimalOdds - 1))
             } else {
