--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             let decimalOdds = parseFloat(document.getElementById("odds").value);
             let americanOdds = 0;
                 if(decimalOdds ==1 ){
-                        alert(1 is not a valid odd)
+                        alert("1 is not a valid odd")
                         {
             if (decimalOdds < 2) {
                 americanOdds = Math.round(-100 / (decimalOdds - 1))
