--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         </tr>
         <tr>
             <td>
-                <input type="text" id="odds" oninput="verifyOdds()" />
+                <input type="text" id="odds" onfocusout="verifyOdds()" />
             </td>
             <td>
                 <p id="americanOdds"></p>
